--- a/app/view/login/login.html
+++ b/app/view/login/login.html
@@ -28,7 +28,7 @@
                     <input ng-model="password" class="login-input" placeholder="请输入密码" type="password">
                     <button ng-click="login()" class="login-btn">登录</button>
                     <div class="login-sub">
-                        <p class="small">注册新用户</p>
+                        <p class="small" ui-sref="register">注册新用户</p>
                     </div>
                     <div class="login-notice small">
                         {{notice}}
