--- a/app/view/microIndustryChain/previewChainView/previewChainView.html
+++ b/app/view/microIndustryChain/previewChainView/previewChainView.html
@@ -1,39 +1,177 @@
 <link rel="stylesheet" href="view/microIndustryChain/previewChainView/previewChainView.css">
 <link rel="stylesheet" href="view/microIndustryChain/previewChainView/iconfont/iconfont.css">
-<div style="position:absolute; left:0; width:100%;height:100%; overflow: hidden">
-    <div id= "left_div"style="width: 40%;float: left;position: absolute">
-        <div id="topElement" onselectstart="return false;">
+<!--<div style="position:absolute; left:0; width:70%;height:100%; overflow: hidden">-->
+    <!--<div id= "left_div"style="width: 40%;float: left;position: absolute">-->
+        <!--<div id="topElement" onselectstart="return false;">-->
 
-    <div>
-        <canvas id="netBackground" style="left: 0; top: 0;"></canvas>
-        <canvas id="connectionBackground" style="left: 0; top: 0;"></canvas>
-        <canvas id="animeBackground" style="left: 0; top: 0;"></canvas>
-        <canvas id="canvas" data-toggle="context" data-target="#canvas-menu" style="left: 0; top: 0;"></canvas>
-    </div>
+    <!--<div>-->
+        <!--<canvas id="netBackground" style="left: 0; top: 0;"></canvas>-->
+        <!--<canvas id="connectionBackground" style="left: 0; top: 0;"></canvas>-->
+        <!--<canvas id="animeBackground" style="left: 0; top: 0;"></canvas>-->
+        <!--<canvas id="canvas" data-toggle="context" data-target="#canvas-menu" style="left: 0; top: 0;"></canvas>-->
+    <!--</div>-->
 
-    <div id="nodeDiv">
+    <!--<div id="nodeDiv">-->
 
-    </div>
-</div>
+    <!--</div>-->
+<!--</div>-->
 
-        <div id = "article" style="left: 50px;top: 700px;width: 1000px;position: absolute;text-align: center">
-            <h1 style="">新型产业链模式下的新契机</h1>
-            <div style="text-align: center;width: 800px;margin:0 auto">
-                    <p>随着技术的发展，迂回生产程度的提高，生产过程划分为一系列有关联的生产环节。分工与交易的复杂化\n
-                对使得在经济中通过什么样的形式联结不同的分工与交易活动成为日益突出的问题。企业组织结构随分工的发展而
-                呈递增式增加。因此，搜寻一种企业组织结构以节省交易费用并进一步促进分工的潜力，相对于生产中的潜力会大大增加(姚小
-                涛，席酉民，2002年)。企业难以应付越来越复杂的分工与交易活动，不得不依靠企业间的相互关联，这种搜寻最佳企业组织结构的动力与实践就成为产业链形成的条件。
+        <!--<div id = "article" style="left: 50px;top: 700px;width: 1000px;position: absolute;text-align: center">-->
+            <!--<h1 style="">新型产业链模式下的新契机</h1>-->
+            <!--<div style="text-align: center;width: 800px;margin:0 auto">-->
+                    <!--<p>随着技术的发展，迂回生产程度的提高，生产过程划分为一系列有关联的生产环节。分工与交易的复杂化\n-->
+                <!--对使得在经济中通过什么样的形式联结不同的分工与交易活动成为日益突出的问题。企业组织结构随分工的发展而-->
+                <!--呈递增式增加。因此，搜寻一种企业组织结构以节省交易费用并进一步促进分工的潜力，相对于生产中的潜力会大大增加(姚小-->
+                <!--涛，席酉民，2002年)。企业难以应付越来越复杂的分工与交易活动，不得不依靠企业间的相互关联，这种搜寻最佳企业组织结构的动力与实践就成为产业链形成的条件。-->
 
-                如图所示，产业链的形成首先是由社会分工引起的，在交易机制的作用下不断引起产业链组织的深化。在图中，C1、C2、C3表示社会分工的程度，其中，C3>C2>C1表示社会分工程度的不断加深；A1、A2、A3表示市场交易的程度，A3>A2>A1表示市场交易程度的不断加深；B1、B2、B3表示产业链的发展程度，其中，B3>B2>B1表示产业链条的不断延伸和产业链形式的日益复杂化。三个坐标相交的原点0，表示既无社会分工也无市场交易更无产业链产生的初始状态。
-                从C1点开始，而不是从坐标原点开始，意味着社会分工是市场交易的起点，也是产业链产生的起点社会分工C1的存在促进了市场交易程度A1的产生，在A1作用下，需要B1的产业链形式与它对接B1这种产业链形式的产生又促进了社会分工的进一步发展，于是，社会分工就从C1演化到C2。相应地，在C2的作用下，市场交易程度从A1发展到A2，A2又促进了产业链形式从B1发展到B2。接着，按照同样的原理，B2促使C2发展到C3，C3又促使A2发展到A3，A3又促使产业链从B2发展到B3……如此周而复始，使产业链不断形成发展。
-                产业链形成的原因在于产业价值的实现和创造产业链是产业价值实现和增值的根本途径。任何产品只有通过最终消费才能实现，否则所有中间产品的生产就不能实现。同时，产业链也体现了产业价值的分割。随着产业链的发展，产业价值由在不同部门间的分割转变为在不同产业链节点上的分割产业链也是为了创造产业价值最大化，它的本质是体现“1+1>2”的价值增值效应。这种增值往往来自产业链的乘数效应，它是指产业链中的某一个节点的效益发生变化时，会导致产业链中的其他关联产业相应地发生倍增效应。产业链价值创造的内在要求是：生产效率≥内部企业生产效率之和(协作乘数效应)；同时，交易成本≤内部企业间的交易成本之和(分工的网络效应)。企业间的关系也能够创造价值。价值链创造的价值取决于该链中企业间的投资。不同企业间的关系将影响它们的投资，并进而影响被创造的价值。通过鼓励企业做出只有在关系持续情况下才有意义的投资，关系就可以创造出价值来。</p>
+                <!--如图所示，产业链的形成首先是由社会分工引起的，在交易机制的作用下不断引起产业链组织的深化。在图中，C1、C2、C3表示社会分工的程度，其中，C3>C2>C1表示社会分工程度的不断加深；A1、A2、A3表示市场交易的程度，A3>A2>A1表示市场交易程度的不断加深；B1、B2、B3表示产业链的发展程度，其中，B3>B2>B1表示产业链条的不断延伸和产业链形式的日益复杂化。三个坐标相交的原点0，表示既无社会分工也无市场交易更无产业链产生的初始状态。-->
+                <!--从C1点开始，而不是从坐标原点开始，意味着社会分工是市场交易的起点，也是产业链产生的起点社会分工C1的存在促进了市场交易程度A1的产生，在A1作用下，需要B1的产业链形式与它对接B1这种产业链形式的产生又促进了社会分工的进一步发展，于是，社会分工就从C1演化到C2。相应地，在C2的作用下，市场交易程度从A1发展到A2，A2又促进了产业链形式从B1发展到B2。接着，按照同样的原理，B2促使C2发展到C3，C3又促使A2发展到A3，A3又促使产业链从B2发展到B3……如此周而复始，使产业链不断形成发展。-->
+                <!--产业链形成的原因在于产业价值的实现和创造产业链是产业价值实现和增值的根本途径。任何产品只有通过最终消费才能实现，否则所有中间产品的生产就不能实现。同时，产业链也体现了产业价值的分割。随着产业链的发展，产业价值由在不同部门间的分割转变为在不同产业链节点上的分割产业链也是为了创造产业价值最大化，它的本质是体现“1+1>2”的价值增值效应。这种增值往往来自产业链的乘数效应，它是指产业链中的某一个节点的效益发生变化时，会导致产业链中的其他关联产业相应地发生倍增效应。产业链价值创造的内在要求是：生产效率≥内部企业生产效率之和(协作乘数效应)；同时，交易成本≤内部企业间的交易成本之和(分工的网络效应)。企业间的关系也能够创造价值。价值链创造的价值取决于该链中企业间的投资。不同企业间的关系将影响它们的投资，并进而影响被创造的价值。通过鼓励企业做出只有在关系持续情况下才有意义的投资，关系就可以创造出价值来。</p>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+
+    <!--<div id="right_div">-->
+        <!--<div class="praise ">-->
+            <!--<span id="praise" data-content="给作者点赞"><img src="view/microIndustryChain/previewChainView/images/zan.png" id="praise-img" /></span>-->
+            <!--<span id="praise-txt">0</span>-->
+            <!--<span id="add-num"><em>+1</em></span>-->
+        <!--</div>-->
+        <!--<div class="reward " >-->
+            <!--<span id = "reward" data-content="给作者打赏">-->
+                <!--<img src="view/microIndustryChain/previewChainView/images/reward.png"  style="width: 40px; height: 40px">-->
+            <!--</span>-->
+        <!--</div>-->
+        <!--<div id="content" style="width: 100%; height: auto;">-->
+            <!--<div class="wrap">-->
+                <!--<div class="comment">-->
+                    <!--<div class="head-face">-->
+                        <!--<img src="view/microIndustryChain/previewChainView/images/user.svg">-->
+                        <!--<p style="margin-top: 10px;    font-weight:bold;font-size: 15px"></p>-->
+                    <!--</div>-->
+                    <!--<div class="content">-->
+                        <!--<div class="cont-box">-->
+                            <!--<textarea class="text" placeholder="请输入..." wrap="hard"></textarea>-->
+                        <!--</div>-->
+                        <!--<div class="tools-box">-->
+                            <!--&lt;!&ndash;<div class="operator-box-btn"><span class="face-icon">☺</span><span class="img-icon">▧</span></div>&ndash;&gt;-->
+                            <!--<div   class="submit-btn"><input id = "subm" type="button" value="提交评论"></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div id="info-show">-->
+                    <!--<ul>-->
+                        <!--<li ng-repeat="comment_detail in commentList track by $index">-->
+                            <!--<div class="head-face">-->
+                                <!--<img src="view/microIndustryChain/previewChainView/images/user.svg"></div>-->
+                            <!--<div class="reply-cont">-->
+                                <!--<p class="username" >{{comment_detail.author}}</p>-->
+                                <!--&lt;!&ndash;<p class="like" ng-click="like_comment(comment_detail)" >  &#xe602;</p>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<p class="step" ng-click="step_comment(comment_detail)">  👎100 </p>&ndash;&gt;-->
+                                <!--<i class="like iconfont icon-good" ng-click="like_comment(comment_detail)" >{{comment_detail.up}}</i>-->
+                                <!--<i class="step iconfont icon-cai" ng-click="step_comment(comment_detail)">{{comment_detail.down}}  </i>-->
+                                <!--<p class="delete iconfont icon-guanbi"  ng-if = "comment_detail.author ==user_id" ng-click="delete_comment(comment_detail)"> </p>-->
+                                <!--<p class="comment-body">{{comment_detail.comment}}</p>-->
+                                <!--<p class="comment-footer">-->
+                                    <!--#{{$index+1}}-->
+                                    <!--{{comment_detail.time.substr(0,4)+"-"+comment_detail.time.substr(4,2)+"-"+comment_detail.time.substr(6,2) }}-->
+                                    <!--{{comment_detail.time.substr(8,2)+":"+comment_detail.time.substr(10,2)+":"+comment_detail.time.substr(12,2)}}  </p></div>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
+
+<!--从这里重写-->
+<!--*************************************************************************************************-->
+
+<div class="container">
+    <div class="head">
+        <div class= "head-left">
+            <div class="head-location">
+                <p>目录1>目录2>目录3</p>
+            </div>
+            <div class="head-title">
+                <h1>文章标题</h1></div>
+            <div class="head-detail">
+                <p>浏览</p>
+                <p>评论</p>
+                <p>赞同</p>
+                <div class="clear"></div>
             </div>
         </div>
+        <div class = "head-right">
+            <div class="head-praise" >
+                <img src = "view/microIndustryChain/previewChainView/images/zan.png" class="head-praise-img">
+                <span >0</span>
+            </div>
+            <div class="head-reward" >
+                <img src = "view/microIndustryChain/previewChainView/images/reward.png" class="head-reward-img">
+                <span >0</span>
+            </div>
+            <div class="clear"></div>
+        </div>
+        <div class="clear"></div>
     </div>
+    <div class="main_content">
+        <div class="left_div">
+            <p>    清晨推开木窗，春风料峭，一丝凉意，却闻到了远方山中木叶的芬芳。
 
-    <div id="right_div">
-        <div id="content" style="width: 100%; height: auto;">
-            <div class="wrap">
+                一个人踽踽凉凉，背好行囊。穿过雨露未的桃林，低头昨夕桃花雨下，风雨无情。落花宛若前世梨花带雨的美人，让人心头悸动，过处是否翩若惊鸿。
+
+                前方一片湖，几座山，岚烟缥缈。呼唤着远方的船家，却无人应，偶然瞥见芦苇丛前有一竹筏，只好自己渡岸。心中难免几许失意，拿出一壶清醇的酒，于湖心独酌半杯。不禁忆起东坡游于赤壁之上“驾一叶之扁舟，举匏樽以相属。寄蜉蝣于天地，渺沧海之一粟。哀吾生之须臾，羡长江之无穷。”不忍叹息。
+
+                水尤清冽，船停靠岸，波光粼粼，不知雨露依旧未凝干。有些微醺，于是系好船，小躺顷刻。醒来已近黄昏，伸了伸懒腰，揉了揉惺忪的眼，准备上山。途中望见一座古香古色的八角亭，纤尘不染，重檐翘角，青龙盘柱，流风余韵。正坐下，身后一簇极似忍冬的花，在黄昏下照的绯红，又不知其名，就起名为“落日”了，袁宏道有言:“茗赏者上也，谈赏者次也，酒赏者下也。”由此观之，清赏最佳。
+
+                转身离开，抬头见不远处有炊烟袅袅绕青竹。便寻之而去，脚下有条青石板的小路通往木屋，别有一翻滋味在心头，木屋的主人，以独特的方式显示了其风雅。不觉沉思良久，走近环顾四周，木屋前并没有什么装饰，唯一的点缀，便是那青翠的竹林和门前挂着的笸篮。简朴之中，却被一丝清新脱俗所感染着，此地幽中静，静中幽。倘若不是这木屋映入眼帘，谁知有人居住呢?
+
+                逝尽，但深知不该冒昧扰人清静，于是久久在门外徘徊。主人点了灯走出来，手里还握着一卷书，正要挂灯笼，瞧见我，提了提灯笼，泛黄的光照着我们，不料……竟是一场旧雨重逢，檐下望进一双深邃的眼瞳，两眼枯涩而泪不出。故人邀我进了屋舍，厅堂中央有一幅宋画，墨色中能看到光的游动。还有两把木椅，椅间的木桌上放着一白瓷兰草。清香满溢，沁人心脾，融了一世，共赴情长。故人邀我留宿并以野簌米酒待之。
+
+                月光消磨这幽深的夜晚，四周静得能听见呼吸，烛光缱绻映照了你容颜，一袭品月流仙裙因风屑，抱一面古琴弹起了《湘妃怨》。虽然很快就要到拂晓，但这夜正好倾诉衷肠。我心思绪翻涌，望着对面那熟悉的脸孔，却只能默默饮酒。
+
+                晨光熹微，清风徐来，山中下起了绵绵细雨，像是黏湿的蛛丝，织成了薄薄的网，颤微微地网住了整个世界。
+
+                烟雨如梦，一袭白衣，清心寡欲，寻一方净地。灯火下读一卷旧书，陋室里养一瓷幽兰，无措中听一曲伤感。却终究踏月而来，只因你在山中。再去见你一面，在远去的时光，将旧梦轻诵，无影亦无踪。
+            </p>
+            <div class="support">
+                <!--<div class="praise ">-->
+                    <!--<span id="praise" data-content="给作者点赞"><img src="view/microIndustryChain/previewChainView/images/zan.png" id="praise-img" /></span>-->
+                    <!--<span id="praise-txt">0</span>-->
+                    <!--<span id="add-num"><em>+1</em></span>-->
+                <!--</div>-->
+                <div class="praise ">
+                    <span id="praise" data-content="给作者点赞"><img src="view/microIndustryChain/previewChainView/images/zan.png" id="praise-img" /></span>
+                    <span id="praise-txt">0</span>
+                    <!--<span id="add-num"><em>+1</em></span>-->
+                </div>
+                <div class="reward ">
+                    <span id="reward" data-content="给作者打赏"><img src="view/microIndustryChain/previewChainView/images/reward.png" id="reward-img" /></span>
+                    <span id="reward-txt">0</span>
+                </div>
+                <div class="gotop ">
+                    <span id="gotop" data-content="返回上层"><img src="view/microIndustryChain/previewChainView/images/gotop.png" id="gotop-img" /></span>
+                </div>
+
+                <div class="clear"></div>
+            </div>
+        </div>
+        <div class="right_div">
+            <div class="author">
+                <div class="author-tip">
+                    <p>本文作者</p>
+                </div>
+                <div class="author-img">
+                    <img src="http://img5.imgtn.bdimg.com/it/u=2347924012,1403917519&fm=200&gp=0.jpg"></div>
+                <div class="author-identity">
+                    <h4 class="author-name">周益冰</h4>
+                    <p class="author-work">资深全栈工程师、阿里CTO、华尔街资深评论人</p></div>
+            </div>
+            <div class="comment_div">
+                <div class="comment-title">
+                    <p>评论</p>
+                </div>
                 <div class="comment">
                     <div class="head-face">
                         <img src="view/microIndustryChain/previewChainView/images/user.svg">
@@ -48,9 +186,10 @@
                             <div   class="submit-btn"><input id = "subm" type="button" value="提交评论"></div>
                         </div>
                     </div>
+                    <div class="clear"></div>
                 </div>
                 <div id="info-show">
-                    <ul>
+                    <ul class="comment-list">
                         <li ng-repeat="comment_detail in commentList track by $index">
                             <div class="head-face">
                                 <img src="view/microIndustryChain/previewChainView/images/user.svg"></div>
@@ -69,8 +208,27 @@
                         </li>
                     </ul>
                 </div>
+                <div class="clear"></div>
             </div>
         </div>
-</div>
+        <div class="clear"></div>
+    </div>
 </div>
 
+<!--<div class="cd-popup">-->
+    <!--<div class="cd-popup-container">-->
+        <!--<a class="cd-popup-close">❎</a>-->
+        <!--<h3>感谢您对作者的支持</h3>-->
+        <!--<div style="margin: 50px">-->
+            <!--<p style="display: inline;">您当前的积分余额:</p>-->
+            <!--<p style="display: inline;">100</p>-->
+        <!--</div>-->
+        <!--<div style="margin: 30px">-->
+            <!--<p style="display: inline;">请输入您的打赏数：</p>-->
+            <!--<input type="number" style="display: inline;">-->
+        <!--</div>-->
+        <!--<button>确认打赏</button>-->
+    <!--</div>-->
+<!--</div>-->
+
+<script src="../../../bower_components/jQuery/dist/jquery.min.js"></script>
