--- a/app/view/personal/personal.html
+++ b/app/view/personal/personal.html
@@ -35,6 +35,60 @@
             <p>产品账户：{{insurance.displayAccountNumber}}</p>
             <p>保险金额：{{insurance.totalPremiumPaidAmount}} {{insurance.currencyCode}}</p>
         </div>
+        <h2>平台积分</h2>
+        <div class="account">
+            <p>当前积分总量：</p>
+            <button class="credit-btn">购买积分</button>
+            <button class="credit-btn">兑换积分</button>
+        </div>
+        <h2>个人信息</h2>
+        <div class = "account">
+            <div>
+                <p class="li-inline">账号：</p>
+                <input class="li-inline" type="text">
+            </div>
+            <div>
+                <p class="li-inline">昵称：</p>
+                <input class="li-inline" type="text">
+            </div>
+            <div>
+                <p class="li-inline">性别：</p>
+                <input class="li-inline" type="text">
+            </div>
+            <div>
+                <p class="li-inline">生日：</p>
+                <input class="li-inline" type="text">
+            </div>
+            <div>
+                <p class="li-inline">真实姓名：</p>
+                <input class="li-inline" type="text">
+            </div>
+            <div>
+                <p class="li-inline">证件号码：</p>
+                <input class="li-inline" type="text">
+            </div>
+            <div>
+                <p class="li-inline">职业：</p>
+                <input class="li-inline" type="text">
+            </div>
+            <div>
+                <p class="li-inline">工作单位：</p>
+                <input class="li-inline" type="text">
+            </div>
+            <div>
+                <p class="li-inline">联系方式：</p>
+                <input class="li-inline" type="text">
+            </div>
+            <div>
+                <p class="li-inline">地址：</p>
+                <input class="li-inline" type="text">
+            </div>
+            <div>
+                <p class="li-inline">个人描述：</p>
+                <input class="li-inline" type="text">
+            </div>
+
+        </div>
     </div>
 </div>
 
