更新绘制时箭头定位错误的bug

--- a/app/view/microIndustryChain/createChainView/createChainView.css
+++ b/app/view/microIndustryChain/createChainView/createChainView.css
@@ -127,9 +127,9 @@ a {
 /*background: white url(icon/分享.png) no-repeat ;*/
 
 /*}*/
-#riskBtn {
-    background: white url(icon/risk.svg) no-repeat;
-}
+/*#riskBtn {*/
+/*background: white url(icon/risk.svg) no-repeat;*/
+/*}*/
 
 #leftToolBar {
     /*position: fixed;*/
