--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -110,7 +110,7 @@
             </div>
         </div>
 
-        <div class="display-div-container">
+        <div id="displayDivContainer"  class="display-div-container">
             <div id="displayDiv">
                 <canvas id="netBackground" style="left: 0; top: 0;"></canvas>
                 <canvas id="connectionBackground" style="left: 0; top: 0;"></canvas>
